--- a/lesson 1/main.css
+++ b/lesson 1/main.css
@@ -51,15 +51,17 @@ ul{
 ul li{
     display: inline-block;
     width: 20%;
+    font-size: .8rem;
     text-align: center;
     border: 1px solid red;
     border-radius: 5px;
-    padding: 1em;
-    margin: 2% 2% 2% 2%;
+    padding: .1em;
+    padding-top: .85em;
+    padding-bottom: .85em;
+    margin: .5% .5% .5% .5%;
     font-weight: 800;
     text-wrap: nowrap;
     overflow: hidden;
-    font-size: .8rem;
 }
 
 header, footer{
