Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is ahead of 'origin/main' by 1 commit.
  (use "git push" to publish your local commits)

Changes to be committed:
	modified:   lesson 1/index.html
	new file:   lesson 2/index.html
	new file:   lesson 2/quiz.js
	modified:   lessonStyle.css
	renamed:    lesson 1/main.css -> mainLesson.css
	new file:   package-lock.json
	new file:   package.json

--- a/lessonStyle.css
+++ b/lessonStyle.css
@@ -89,3 +89,29 @@ input[type="radio"]{
     text-shadow: 1px 1px 1px rgb(85, 90, 89);
     color: wheat;
 }
+
+code{
+    color: black;
+    text-shadow: none;
+    background-color: #eee;
+    width: 100%;
+    display: block;
+    border-top: 1em solid salmon;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 2%;
+    padding-top: 3%;
+}
+
+#code{
+    position: relative;
+}
+
+fieldset #copy{
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    max-height: 2em;
+    font-size: 1rem;
+    background-color: black;
+    color: gainsboro;
+}
